tests/sksl/errors/VoidConstructor.glsl
### Compilation failed:

error: 2: cannot construct 'void'
1 error
